feat: Implement Bin feature for notes. Added isBinned field, updated NoteDao, NoteDatabase migration, NotesViewModel, created BinScreen, BinViewModel, BinEvent, BinState, added string resources, integrated BinScreen into NavGraph, added Bin navigation item to NotesScreen, and updated ViewModelFactory.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">NoteNext</string>
+    <string name="bin_title">Bin</string>
+    <string name="empty_bin">Empty Bin</string>
+    <string name="bin_empty_message">Bin is empty</string>
+    <string name="restore_note">Restore Note</string>
+    <string name="delete_permanently">Delete Permanently</string>
 </resources>
