Refactor: Consolidate UI component improvements and documentation
This commit squashes multiple previous commits into a single, comprehensive update
focused on enhancing the readability, maintainability, and accessibility of
various UI components within the application.

Key improvements include:
- Adding extensive KDoc comments to composables, explaining their purpose,
  parameters, and complex logic.
- Incorporating inline comments to clarify UI structure, logic, and animation
  details across components like TopAppBars, BottomAppBars, Editors, and Dialogs.
- Replacing hardcoded strings with string resources for improved internationalization
  and accessibility (e.g., content descriptions, titles, placeholders).
- Refining animation labels for better clarity and understanding.
- Cleaning up code style, including indentation and unnecessary empty lines.
- Distinguishing between similar components (e.g., LabelDialogs) with clear documentation.

This refactoring effort covers components in:
-  (ContextualTopAppBar, LabelDialog, MultiActionFab, NoteItem, SearchBar, SearchTopAppBar)
-  (AddEditNoteBottomAppBar, AddEditNoteTopAppBar, ChecklistEditor, ColorPicker, Dialogs, FormatToolbar, HeadingStylePicker, ImageViewerScreen, LinkPreviewCard, MoreOptionsSheet, NoteEditor)

The goal is to make the codebase more professional, easier to understand, and
more robust for future development, without altering existing functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">NoteNext</string>
+    <string name="manage_labels">Manage Labels</string>
+    <string name="label_icon">Label icon</string>
+    <string name="pinned_note_description">Pinned note</string>
+    <string name="attachment_icon_description">Attachment</string>
+    <string name="reminder_icon_description">Reminder</string>
+    <string name="reminder_date_format">MMM dd, yyyy HH:mm</string>
+    <string name="list_view_icon_description">List view</string>
+    <string name="grid_view_icon_description">Grid view</string>
+    <string name="checkbox_content_description">Checklist item checkbox</string>
+    <string name="selected_color_description">Selected color</string>
+    <string name="bold_description">Bold</string>
+    <string name="italic_description">Italic</string>
+    <string name="underline_description">Underline</string>
+    <string name="heading_style_description">Heading Style</string>
+    <string name="insert_link_description">Insert link</string>
+    <string name="image_content_description">Image</string>
 </resources>
