Feature: Implement Note Versioning and Internal Note Linking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="heading_style_description">Heading Style</string>
     <string name="insert_link_description">Insert link</string>
     <string name="image_content_description">Image</string>
+    <string name="history">History</string>
 </resources>
